Airflow - Task/logs/dag_id=Task-4/run_id=scheduled__2024-01-03T000000+0000/task_id=create_postgres_table/attempt=2.log
[2024-01-04T11:25:45.488+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Task-4.create_postgres_table scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T11:25:45.505+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Task-4.create_postgres_table scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T11:25:45.506+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 2
[2024-01-04T11:25:45.531+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2024-01-03 00:00:00+00:00
[2024-01-04T11:25:45.538+0000] {standard_task_runner.py:57} INFO - Started process 2786 to run task
[2024-01-04T11:25:45.545+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Task-4', 'create_postgres_table', 'scheduled__2024-01-03T00:00:00+00:00', '--job-id', '99', '--raw', '--subdir', 'DAGS_FOLDER/Airflow-task-3.py', '--cfg-path', '/tmp/tmpv2m7c73u']
[2024-01-04T11:25:45.547+0000] {standard_task_runner.py:85} INFO - Job 99: Subtask create_postgres_table
[2024-01-04T11:25:45.635+0000] {task_command.py:416} INFO - Running <TaskInstance: Task-4.create_postgres_table scheduled__2024-01-03T00:00:00+00:00 [running]> on host 89e7ff4d9ff4
[2024-01-04T11:25:45.758+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Task-4' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-01-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-03T00:00:00+00:00'
[2024-01-04T11:25:45.760+0000] {sql.py:274} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS your_table_name (
                column1 datatype1,
                column2 datatype2,
                -- add more columns as needed
            );
        
[2024-01-04T11:25:45.774+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-04T11:25:45.789+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-01-04T11:25:45.862+0000] {sql.py:418} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS your_table_name (
                column1 datatype1,
                column2 datatype2,
                -- add more columns as needed
            );
        , parameters: None
[2024-01-04T11:25:45.867+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 6:             );
                    ^

[2024-01-04T11:25:45.881+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Task-4, task_id=create_postgres_table, execution_date=20240103T000000, start_date=20240104T112545, end_date=20240104T112545
[2024-01-04T11:25:45.901+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 99 for task create_postgres_table (syntax error at or near ")"
LINE 6:             );
                    ^
; 2786)
[2024-01-04T11:25:45.917+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-04T11:25:45.949+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
